--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-react-app": "^0.6.2",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
