--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-example",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://YoginAlex.github.io/react-code-example",
   "dependencies": {
     "material-ui": "^0.17.1",
     "moment": "^2.18.1",
@@ -20,6 +21,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "gh-pages": "^0.12.0",
     "node-sass": "^4.5.1",
     "npm-run-all": "^4.0.2",
     "react-scripts": "0.9.5",
@@ -32,6 +34,8 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
